# Third3D-uploader

./: LICENSE  README.md  bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-tauri.yml
src/: api.ts  app.tsx  auth.tsx  bundle-input.tsx  bundle.tsx  file-input.tsx  index.css  main.tsx  upload-avatar.ts  upload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  main.rs  upload.rs
src/components/ui/: button.tsx  dialog.tsx  input-otp.tsx
