[package]
name = "uploader"
version = "0.2.1"
description = "Third Uploader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
md-5 = "0.10"
base64 = "0.22"
librsync = { git = "https://github.com/mbrt/librsync-rs.git" }
tokio = "1.40"
futures-util = "0.3.30"
read-progress-stream = "1.0.0"
thiserror = "1.0.63"
tokio-util = { version = "0.7", features = [ "codec" ] }
reqwest = { version = "0.12", features = [ "json", "stream" ] }
zip = "2.2"
rand = "0.8"
lz4_flex = "0.11.3"
liblzma = { version = "0.3", features = ["static"] }
zstd = { version = "0.13", features = ["zstdmt"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
